external-crates/move/crates/move-compiler/tests/development/enums/matching/bind_subject.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/bind_subject.move:3:17
  │
3 │     public enum Option<T> has drop {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

